@@ -147,7 +147,7 @@ typedef struct HumanContext
 } tHumanContext;
 
 static const int FuelReserve = 3;
-static const tdble MaxFuelPerMeter = 0.0008;	// [kg/m] fuel consumption.
+static const tdble MaxFuelPerMeter = 0;	// [kg/m] fuel consumption.
 
 static void updateKeys(void);
 static void SetFuelAtRaceStart(tTrack *track, void *carHandle,
@@ -2242,7 +2242,7 @@ static void SetFuelAtRaceStart(tTrack* track, void *carHandle, void **carParmHan
     } else {
         // We must load and calculate parameters.
         const tdble fuel_cons_factor =
-            GfParmGetNum(*carParmHandle, SECT_ENGINE, PRM_FUELCONS, NULL, 1.0f);
+            0;
         tdble fuel_per_lap = track->length * MaxFuelPerMeter * fuel_cons_factor;
         tdble fuel_for_race = fuel_per_lap * (s->_totLaps + 1.0f);// + FuelReserve;
         // aimed at timed sessions:
